http://bugzilla.zimbra.com/show_bug.cgi?id=6906 bug: 6906 - Integrate change 24075 from main to Cray
Copied from Perforce
 Change: 24076